chore: ignore compiled CSS and dependencies
- Add pause-urbaine-wp-theme/assets/css/main.css to .gitignore
- Add node_modules and pnpm-lock.yaml to .gitignore
- Remove compiled CSS from git tracking
- CSS will be compiled during build process

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 *.zip
 *.tar.gz
 *.rar
+
+# Compiled CSS
+pause-urbaine-wp-theme/assets/css/main.css
+
+# Dependencies
+node_modules/
+pnpm-lock.yaml
