feat(booking): add online booking links to location cards
- Add booking_url to locations data for both salons
- Bel-Air: https://book.heygoldie.com/PauseUrbaine
- Eaux-Vives: https://book.heygoldie.com/PauseUrbaineEAUX-VIVES
- Display booking button in location cards on contact page
- Button opens in new tab with calendar icon

--- a/pause-urbaine-website/data/locations.yaml
+++ b/pause-urbaine-website/data/locations.yaml
@@ -10,6 +10,7 @@ locations:
       country: "Suisse"
     phone: "022 310 4081"
     instagram: "pauseurbaine"
+    booking_url: "https://book.heygoldie.com/PauseUrbaine"
     maps_url: "https://www.google.com/maps/search/?api=1&query=Quai+des+Moulins+12A,+1204+Genève"
     hours:
       - day:
@@ -52,6 +53,7 @@ locations:
       country: "Suisse"
     phone: "022 736 2030"
     instagram: "pauseurbaine_eauxvives"
+    booking_url: "https://book.heygoldie.com/PauseUrbaineEAUX-VIVES"
     maps_url: "https://www.google.com/maps/search/?api=1&query=Rue+de+Montchoisy+40,+1207+Genève"
     hours:
       - day:
